[package]
name = "rust-tui-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
color-eyre = "0.6.3"
unicode-width = "0.2.2"
chrono = "0.4.43"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[[bin]]
name = "ex01_hello_tui"
path = "src/bin/ex01_hello_tui.rs"
